<resources>
    <string name="app_name">tanaApp</string>
    <string name="scan_qrcode">&#x20;&#x20;&#x20;Scan QR Code&#x20;&#x20;&#x20;</string>

    <string name="item_fav">&#x20;foi favoritado!</string>
    <string name="item_disfav">&#x20;foi desfavoritado!</string>
    <string name="fav_error">Não foi possível favoritar. Tente novamente.</string>
    <string name="disfav_error">Não foi possível desfavoritar. Tente novamente.</string>

    <string name="add_cart">&#x20;&#x20;&#x20;adicionar na sacola&#x20;&#x20;&#x20;</string>
    <string name="cart_error">Não foi possível adicionar à sacola. Tente novamente.</string>

    <string name="close_order">&#x20;&#x20;fechar pedido&#x20;&#x20;</string>
    <string name="closed_order">Pedido Fechado!</string>
    <string name="closed_order_wait">Aguarde que iremos até sua mesa</string>
    <string name="new_order">&#x20;&#x20;novo pedido&#x20;&#x20;</string>

    <string name="empty_favlist">Não há items favoritados!</string>
    <string name="empty_cart">Não há items na sacola!</string>

    <string name="item_title">Título do alimento</string>
    <string name="item_desc">Descrição do alimento</string>
    <string name="item_add">O item foi adicionado à sacola!</string>
    <string name="item_remove">O item foi removido da sacola!</string>
    <string name="item_qt_symbol">x</string>
    <string name="item_less">–</string>
    <string name="item_qt_number">1</string>
    <string name="item_more">+</string>
    <string name="item_price">R$&#x20;</string>
    <string name="total">Total R$&#x20;</string>

    <!-- Menu Titles -->

    <string name="title_menu">Cardápio</string>
    <string name="title_fav">Favoritos</string>
    <string name="title_cart">Sacola</string>

    <!-- Descriptions -->

    <string name="qrcode_desc">Imagem de um qrcode</string>
    <string name="logo_round_desc">Ícone redondo, sendo ele um círculo com um traço do eixo transversal da direta pra esquerda </string>
    <string name="logo_letters_desc">Imagem com as letras do logo "Ta ná mão"</string>
    <string name="ic_cutlery_desc">Ícone de uma garfo e uma faca cruzados em branco</string>
    <string name="ic_heart_desc">Ícone de uma coração sem preenchimento com contorno em branco</string>
    <string name="ic_cart_desc">Ícone de um carrinho de mercado em branco</string>
    <string name="ic_qrcode_desc">Ícone de um qrcode com uma lupa</string>
    <string name="ic_fav_desc">Ícone de coração na cor cinza</string>
    <string name="ic_disfav_desc">ícone de coração sem preenchimento com contorno preto</string>
    <string name="empty_file_desc">Representação de um arquivo de imagem com uma arvore, nuvens e estrelas ao lado</string>
    <string name="empty_image_desc">Representação de um vetor de uma foto em cor cinza claro</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>