<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:id="@+id/container"
    tools:context=".ui.end.view.EndFragment">

    <TextView
        android:id="@+id/tvClosedOrderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed_order"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/text_30"
        android:layout_marginTop="@dimen/size_70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvClosedOrderWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed_order_wait"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/text_18"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvClosedOrderTitle"/>

    <Button
        android:id="@+id/bvNewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_order"
        android:textColor="@color/dark_gray"
        android:backgroundTint="@color/light_gray"
        android:layout_marginTop="@dimen/size_40"
        app:layout_constraintTop_toBottomOf="@id/tvClosedOrderWait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/tvLogo"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_70"
        android:src="@drawable/tana_whiteicon"
        android:contentDescription="@string/logo_round_desc"
        android:layout_marginTop="@dimen/size_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bvNewOrder" />

    <ImageView
        android:id="@+id/tvLogoLetters"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_100"
        android:src="@drawable/tana_whitelogo"
        android:contentDescription="@string/logo_letters_desc"
        android:layout_marginTop="@dimen/text_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogo"/>

</androidx.constraintlayout.widget.ConstraintLayout>