<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".ui.detail.view.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivItemDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_300"
            android:src="@drawable/empty_image"
            android:contentDescription="@string/empty_image_desc"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginHorizontal="@dimen/size_20"
            android:text="@string/item_title"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toStartOf="@id/ivFavorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivItemDetail" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_30"
            android:layout_marginVertical="@dimen/size_20"
            android:layout_marginHorizontal="@dimen/size_30"
            android:contentDescription="@string/ic_fav_desc"
            android:foregroundGravity="right"
            android:src="@drawable/ic_fav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivItemDetail" />

        <TextView
            android:id="@+id/tvItemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginHorizontal="@dimen/size_20"
            android:maxLines="5"
            android:text="@string/item_desc"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_13"
            app:layout_constraintEnd_toStartOf="@id/ivFavorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemTitle" />

        <TextView
            android:id="@+id/tvItemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginHorizontal="@dimen/size_20"
            android:text="@string/item_price"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_13"
            app:layout_constraintEnd_toStartOf="@id/ivFavorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemDescription" />

        <TextView
            android:id="@+id/tvLess"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_40"
            android:layout_marginVertical="@dimen/size_20"
            android:background="@color/light_gray"
            android:gravity="center"
            android:text="@string/item_less"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_10"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@id/tvQuantity"
            app:layout_constraintStart_toStartOf="@id/tvItemPrice"
            app:layout_constraintTop_toBottomOf="@id/tvItemPrice"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_40"
            android:layout_marginVertical="@dimen/size_20"
            android:background="@color/light_gray"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/item_qt_number"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_10"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvLess"
            app:layout_constraintTop_toBottomOf="@id/tvItemPrice"
            app:layout_constraintEnd_toStartOf="@id/tvMore"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_40"
            android:layout_marginVertical="@dimen/size_20"
            android:background="@color/light_gray"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/item_more"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_10"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvQuantity"
            app:layout_constraintTop_toBottomOf="@id/tvItemPrice"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvBagAdd"
            android:layout_width="@dimen/size_150"
            android:layout_height="@dimen/size_40"
            android:layout_marginVertical="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_30"
            android:background="@color/dark_gray"
            android:gravity="center"
            android:text="@string/add_bag"
            android:textAllCaps="true"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/text_10"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/tvItemPrice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>